[package]
name = "rooster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14"
futures-util = "0.3"
lazy_static = "1.4.0"
rcon = { version = "0.6.0", features = ["rt-async-std"] }
regex = "1.8"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
